--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
   
     <div id="timeline-container">
       <div id="timeline">
-        <button class="timeline-dot" data-album="savage"><span class="label"><small>2021-10-05</small><span>Savage</span></span><span class="dot"></span></button>
-        <button class="timeline-dot" data-album="girls"><span class="label"><small>2022-07-08</small><span>Girls</span></span><span class="dot"></span></button>
-        <button class="timeline-dot" data-album="my_world"><span class="label"><small>2023-05-08</small><span>My World</span></span><span class="dot"></span></button>
-        <button class="timeline-dot" data-album="drama"><span class="label"><small>2023-11-10</small><span>Drama</span></span><span class="dot"></span></button>
-        <button class="timeline-dot" data-album="armageddon"><span class="label"><small>2024-05-27</small><span>Armageddon</span></span><span class="dot"></span></button>
-        <button class="timeline-dot" data-album="whiplash"><span class="label"><small>2024-10-21</small><span>Whiplash</span></span><span class="dot"></span></button>
+        <button class="timeline-dot" data-album="Savage"><span class="label"><small>2021-10-05</small><span>Savage</span></span><span class="dot"></span></button>
+        <button class="timeline-dot" data-album="Girls"><span class="label"><small>2022-07-08</small><span>Girls</span></span><span class="dot"></span></button>
+        <button class="timeline-dot" data-album="My_World"><span class="label"><small>2023-05-08</small><span>My World</span></span><span class="dot"></span></button>
+        <button class="timeline-dot" data-album="Drama"><span class="label"><small>2023-11-10</small><span>Drama</span></span><span class="dot"></span></button>
+        <button class="timeline-dot" data-album="Armageddon"><span class="label"><small>2024-05-27</small><span>Armageddon</span></span><span class="dot"></span></button>
+        <button class="timeline-dot" data-album="Whiplash"><span class="label"><small>2024-10-21</small><span>Whiplash</span></span><span class="dot"></span></button>
         <!-- <button class="timeline-dot" data-album="single1"><span class="label"><small>鍗曟洸1</small><span>棰勭暀</span></span><span class="dot"></span></button>
         <button class="timeline-dot" data-album="single2"><span class="label"><small>鍗曟洸2</small><span>棰勭暀</span></span><span class="dot"></span></button> -->
       </div>
