--- a/member.html
+++ b/member.html
@@ -15,7 +15,8 @@
       <img id="member-avatar" src="" alt="成员头像" />
       <div id="member-info-mask">
         <h1 id="member-name"></h1>
-        <p id="member-position"></p>
+        <p id="member-introduction"></p>
+        <p id="member-MBTI"></p>
         <p id="member-birth"></p>
       </div>
     </div>
