--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
     <script src="js/timeline.js" defer></script>
-    <style>
+    <!-- <style>
       #page-transition-mask {
         position: fixed;
         inset: 0;
@@ -23,7 +23,7 @@
         pointer-events: auto;
         transform: scale(1.04);
       }
-    </style>
+    </style> -->
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         let mask = document.createElement('div');
