--- a/album.html
+++ b/album.html
@@ -7,6 +7,7 @@
   <title>aespa 专辑展示</title>
   <link rel="stylesheet" href="css/album.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="js/reloader.js" defer></script>
 </head>
 
 <body>
