--- a/index.html
+++ b/index.html
@@ -7,23 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
     <script src="js/timeline.js" defer></script>
-    <!-- <style>
-      #page-transition-mask {
-        position: fixed;
-        inset: 0;
-        z-index: 9999;
-        background: #181a1b;
-        pointer-events: none;
-        opacity: 0;
-        transition: opacity 0.5s cubic-bezier(.4,0,.2,1), transform 0.5s cubic-bezier(.4,0,.2,1);
-        will-change: opacity, transform;
-      }
-      #page-transition-mask.active {
-        opacity: 1;
-        pointer-events: auto;
-        transform: scale(1.04);
-      }
-    </style> -->
+    <script src="js/reloader.js" defer></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         let mask = document.createElement('div');
