--- a/member.html
+++ b/member.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>成员展示页</title>
   <link rel="stylesheet" href="css/member.css" />
+  <script src="js/reloader.js" defer></script>
 </head>
 
 <body>
