--- a/member.html
+++ b/member.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>成员展示页</title>
   <link rel="stylesheet" href="css/member.css" />
+  <link rel="stylesheet" href="css/member.responsive.css" />
+  <script src="js/auth.js"></script>
   <script src="js/reloader.js" defer></script>
+  <script src="js/member.mobile.js" defer></script>
 </head>
 
 <body>
